app funziona ma ha funzionalità limitate

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
 #db_properties
-db.url=jdbc:mysql://127.0.0.1:3306/jdbc:mysql://127.0.0.1:3306/register_schema
+db.url=jdbc:mysql://localhost:3306/register_schema
 db.user=root
 db.password=Filippo98
 
