--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>ProgettoMola</artifactId>
+    <artifactId>ArtConnect</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>ProgettoMola</name>
 
